Fix missing padding on the right frame in Firefox for Mac
https://github.com/erikdubbelboer/phpRedisAdmin/pull/160#issuecomment-590048242

--- a/css/frame.css
+++ b/css/frame.css
@@ -1,8 +1,3 @@
-body {
-padding-left: 1.5em;
-padding-right: 1.5em;
-}
-
 form {
 margin: 0;
 }
